<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pixer</string>

    <!--Home-->
    <string name="logo_discrpt">Pixer Logo</string>
    <string name="app_discript">We analyse everything for you!</string>

    <!--Select Function Page-->
    <string name="scan_obj">SCAN OBJECT</string>
    <string name="scan_exp">SCAN EXPRESSIONS</string>
    <string name="scan_txt">SCAN TEXT</string>
    <string name="scan_face">SCAN FACE</string>

    <!--Function option page headers-->
    <string name="headerObj">OBJECTS</string>
    <string name="headerExp">EXPRESSION</string>
    <string name="headerTxt">TEXT</string>
    <string name="headerFace">FACE</string>

    <string name="viewRepo">View Report</string>

    <string name="bicycleImg">bicycle</string>
    <string name="flightImg">flight</string>
    <string name="walkImg">walk</string>

    <string name="scanObjCamelCase">Scan Objects</string>
    <string name="scanExpCamelCase">Scan Expression</string>
    <string name="scanFaceCamelCase">Scan Face</string>
    <string name="scanTxtCamelCase">Scan Text</string>

    <!--Titles for option selection page-->
    <string name="TitleRepo">Check report to view previous history...</string>
    <string name="TitleObj">Bare eye does not t help you. Detect multiple objects within an image, with bounding boxes.</string>
    <string name="TitleExp">True artistic expression lies in conveying emotion. Just scan and see it.</string>
    <string name="TitleFace">Detect weather is there any human face appearing.</string>
    <string name="TitleTxt">Scan and grab your texts</string>

    <!--Navigator links-->
    <string name="NavAboutUs">About Us</string>
    <string name="NavHome">Home</string>
    <string name="NavPrivacy">Privacy and Policy</string>

    <!--Function image upload page-->
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="drop_your_image">Drop your image</string>
    <string name="AnalysisObject">Objects Detected</string>
    <string name="AnalysisExpression">Expression Result</string>
    <string name="AnalysisFace">Text Detected</string>
    <string name="AnalysisText">Face Detected</string>

    <!--Navigators Java-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Report-->
    <string name="Report">Reports</string>
    <string name="DeleteRecord">Delete Record</string>


    <string name="todo">TODO</string>
    <string name="reult">Result</string>


</resources>