<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectFunction"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/headingFace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headingFace"
            android:layout_width="158dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="77dp"
            android:fontFamily="@font/asap"
            android:text="@string/headerFace"
            android:textColor="#4E916E"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/headerImg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="153dp"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="39dp"
            android:fontFamily="@font/asap"
            android:text="@string/TitleExp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingFace" />

        <ImageView
            android:id="@+id/headerImg"
            android:layout_width="138dp"
            android:layout_height="143dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="26dp"
            android:contentDescription="@string/bicycleImg"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/ic_baseline_face_24"
            app:tint="#4e916e"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="303dp"
            android:layout_height="332dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="54dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerImg">

            <Button
                android:id="@+id/scanBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/scan_option"
                android:fontFamily="@font/asap"
                android:padding="0dp"
                android:text="@string/scanObjCamelCase"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/report"
                android:fontFamily="@font/asap"
                android:padding="0dp"
                android:text="@string/viewRepo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="136dp"
            android:layout_height="45dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="31dp"
            android:text="@string/TitleRepo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>